最终完成（加入MyApplication处理所有的全局变量）(主题修改部分完成) (第七次修改).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <dist:module dist:instant="true" />
 
     <application
+        android:name=".my_application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,11 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NewOrUpdateDayActivity"
+            android:name=".activity.NewOrUpdateDayActivity"
             android:label="">
         </activity>
         <activity
-            android:name=".DayMessageActivity"
+            android:name=".activity.DayMessageActivity"
             android:label=""
             android:screenOrientation="portrait">
             <intent-filter>
@@ -26,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
