--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,15 +7,27 @@ android {
         applicationId "com.jnu.i_time"
         minSdkVersion 15
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "3.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            lintOptions {
+                checkReleaseBuilds false
+                abortOnError false
+            }
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    android.applicationVariants.all{
+        variant->
+            variant.outputs.all{
+                outputFileName="itime.apk"
+            }
     }
 }
 
